<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nickname_input_notice"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_default"
            android:id="@+id/editText"
            android:editable="true"
            android:clickable="true" />

        <Button
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:text="@string/nickname_submit"
            android:id="@+id/button" android:textAlignment="center"
            style="@style/ButtonBar"
            android:onClick="onClick"/>

    </LinearLayout>
</LinearLayout>